--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua </li>
+         <li> Integracion compleja</li>
      </ul>
 </body>
-</html>
+</html> 
